<resources>
    <string name="app_name">Lori Timesheets</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Splash -->
    <string name="splash_text">Lori Awesome Logo</string>

    <!-- Login -->
    <string name="sign_in">Вход</string>
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="sign_out">Выйти</string>

    <!-- Week screen -->
    <string name="count_of_hours_format">%.2f</string>

    <!-- Date format -->
    <string name="day_of_week_name_format">EEEE</string>
    <string name="day_date_format">d MMMM yyyy</string>
    <string name="week_range_date_format">d MMMM yyyy</string>
    <string name="week_range_format" formatted="false">%s - %s</string>
    <string name="work_hours_format" formatted="false">%d ч. %d м.</string>

    <!-- Add entry -->
    <string name="project_label">Проект</string>
    <string name="task_label">Задача</string>
    <string name="date_label">Дата</string>
    <string name="count_of_hours_label">Время работы</string>
    <string name="add_button">Добавить</string>
    <string name="remove_dialog">Удалить запись?</string>

</resources>
